--- a/pom.xml
+++ b/pom.xml
@@ -71,14 +71,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>2.9.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.rij.minecraft.bukkit</groupId>
             <artifactId>AmetisAPI</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
